test: json 형식, view 이름까지 검증하도록 변경